Fix Report Issues For Invoice and Advice Page